JDK17 support